Accesibilité: Correction sur Contrast ratio; Correction sur les liens sociaux

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1405,13 +1405,11 @@ textarea {
 }
 
 a {
-    color: #337ab7;
     text-decoration: none
 }
 
 a:focus,
 a:hover {
-    color: #23527c;
     text-decoration: underline
 }
 
